Added Catalogs with synchronization and fake data generation

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 API_HOST=0.0.0.0
 API_PORT=3000
-LOG_LEVEL=debug
+LOG_LEVEL=info
 MONGO_URL=mongodb://localhost:27017/example
 EXCHANGE=test-exchange
 AUDITLOG_ROUTE=auditLog
