--- a/tsconfig.json
+++ b/tsconfig.json
@@ -104,5 +104,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src", "tests", "src/core/services/.svc.ts"]
+  "include": ["src", "tests"]
 }
