--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@rabbitmq-ts/fastify-consumer": "^1.0.1",
     "@rabbitmq-ts/fastify-producer": "^1.0.1",
     "ajv": "^8.12.0",
+    "bullmq": "^4.13.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.13.0",
     "fastify-plugin": "^4.5.0",
