Added search capabilities with Typesense

--- a/.env
+++ b/.env
@@ -14,3 +14,6 @@ RABBITMQ_PORT=5672
 RABBITMQ_VIRTUAL_HOST=/
 RABBITMQ_HOST=127.0.0.1
 CACHE_JSON_SCHEMAS=true
+TYPESENSE_API_KEY=xyz
+TYPESENSE_HOST=127.0.0.1
+TYPESENSE_PORT=8108
