Refactor search service to use messages

--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@ API_PORT=3000
 LOG_LEVEL=info
 MONGO_URL=mongodb://localhost:27017/example
 EXCHANGE=test-exchange
-AUDITLOG_ROUTE=auditLog
+ENTITY_UPDATE_ROUTE=entityUpdate
 AUDITLOG_QUEUE=auditLogQueue
+SEARCH_QUEUE=searchQueue
 CC_TREE_ROUTE=updateChildAncestorsForId
 CC_TREE_QUEUE=updateChildAncestorsForIdQueue
 RABBITMQ_USERNAME=guest
