--- a/.env.template
+++ b/.env.template
@@ -18,3 +18,9 @@ CACHE_JSON_SCHEMAS=true
 TYPESENSE_API_KEY=xyz
 TYPESENSE_HOST=127.0.0.1
 TYPESENSE_PORT=8108
+DEBUG=false
+CT_AUTHHOST=
+CT_HTTPHOST=
+CT_PROJECTKEY=
+CT_CLIENTID=
+CT_CLIENTSECRET=
