--- a/.env.template
+++ b/.env.template
@@ -19,6 +19,7 @@ TYPESENSE_API_KEY=xyz
 TYPESENSE_HOST=127.0.0.1
 TYPESENSE_PORT=8108
 DEBUG=false
+CT_SCOPE=
 CT_AUTHHOST=
 CT_HTTPHOST=
 CT_PROJECTKEY=
