--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "fastify": "^4.13.0",
     "fastify-plugin": "^4.5.0",
     "fastify-print-routes": "^2.1.0",
+    "hazelcast-client": "^5.3.0",
     "json-predicate": "^0.9.5",
     "jsonata": "^2.0.3",
     "jsonpath-plus": "^7.2.0",
     "module-alias": "^2.2.2",
     "mongo-update": "^1.1.0",
     "nanoid": "^3.3.4",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.5",
