--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "async-sema": "^3.1.1",
     "eslint": "^8.35.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.27.5",
