--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "module-alias": "^2.2.2",
     "mongo-update": "^1.1.0",
     "nanoid": "^3.3.4",
+    "nats": "^2.18.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
