--- a/package.json
+++ b/package.json
@@ -15,54 +15,50 @@
   },
   "license": "UNLICENSED",
   "devDependencies": {
-    "@faker-js/faker": "^8.2.0",
-    "@shelf/jest-mongodb": "^4.1.6",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.2",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@faker-js/faker": "^9.2.0",
+    "@shelf/jest-mongodb": "^4.3.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "async-sema": "^3.1.1",
-    "eslint": "^8.35.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint": "^9.15.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.13.2",
+    "eslint-plugin-promise": "^7.1.0",
     "jest": "^29.4.3",
-    "pino-pretty": "^9.4.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "@commercetools/platform-sdk": "^7.1.0",
-    "@commercetools/sdk-client-v2": "^2.3.0",
-    "@fastify/mongodb": "^8.0.0",
-    "@fastify/request-context": "^5.0.0",
-    "@fastify/swagger": "^8.3.1",
-    "@fastify/swagger-ui": "^1.5.0",
-    "@fastify/type-provider-typebox": "^3.5.0",
-    "@mgcrea/fastify-request-logger": "^1.3.0",
-    "@mgcrea/pino-pretty-compact": "^1.3.0",
-    "@rabbitmq-ts/fastify-consumer": "^1.0.1",
-    "@rabbitmq-ts/fastify-producer": "^1.0.1",
-    "ajv": "^8.12.0",
+    "@commercetools/platform-sdk": "^7.20.0",
+    "@commercetools/sdk-client-v2": "^2.5.0",
+    "@fastify/mongodb": "^9.0.1",
+    "@fastify/request-context": "^6.0.1",
+    "@fastify/swagger": "^9.3.0",
+    "@fastify/swagger-ui": "^5.1.0",
+    "@fastify/type-provider-typebox": "^5.0.1",
+    "@mgcrea/fastify-request-logger": "^1.9.0",
+    "@mgcrea/pino-pretty-compact": "^1.4.2",
+    "ajv": "^8.17.1",
     "dotenv": "^16.0.3",
-    "fastify": "^4.13.0",
-    "fastify-plugin": "^4.5.0",
-    "fastify-print-routes": "^2.1.0",
-    "hazelcast-client": "^5.3.0",
-    "json-predicate": "^0.9.5",
+    "fastify": "^5.1.0",
+    "fastify-plugin": "^5.0.1",
+    "fastify-print-routes": "^4.0.0",
     "jsonata": "^2.0.3",
-    "jsonpath-plus": "^7.2.0",
+    "jsonpath-plus": "^10.2.0",
+    "kolorist": "^1.8.0",
     "module-alias": "^2.2.2",
     "mongo-update": "^1.1.0",
-    "nanoid": "^3.3.4",
-    "nats": "^2.18.0",
+    "mongodb": "^6.10.0",
+    "nanoid": "^5.0.8",
+    "nats": "^2.28.2",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.0.1",
-    "rimraf": "^5.0.5",
     "ts-results": "^3.3.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.6.3",
     "typesense": "^1.7.2"
   },
   "_moduleAliases": {
@@ -76,6 +72,6 @@
     ]
   },
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   }
 }
