Big update to allow Typescript to run with the new --experimental-strip-types

--- a/.env.template
+++ b/.env.template
@@ -2,21 +2,36 @@ NODE_ENV=development
 API_HOST=0.0.0.0
 API_PORT=3000
 LOG_LEVEL=info
-MONGO_URL=mongodb://localhost:27017/example
-EXCHANGE=test-exchange
-ENTITY_UPDATE_ROUTE=entityUpdate
-AUDITLOG_QUEUE=auditLogQueue
-SEARCH_QUEUE=searchQueue
+#LOG_LEVEL_DB=info
+#LOG_LEVEL_NATS=info
+#LOG_LEVEL_AUDITLOG=info
+
+PROJECTID=TestProject
+
 CC_TREE_ROUTE=updateChildAncestorsForId
-CC_TREE_QUEUE=updateChildAncestorsForIdQueue
 CACHE_JSON_SCHEMAS=true
+
+# Mongo
+MONGO_URL=mongodb://localhost:27017/ecomm
+
+# NATS
+NATS_URL=localhost:4222
+
+# TypeSense
 TYPESENSE_API_KEY=xyz
 TYPESENSE_HOST=127.0.0.1
 TYPESENSE_PORT=8108
-DEBUG=false
+CATALOGS_TO_INDEX=stage,online
+
+# commercetools
 CT_SCOPE=
 CT_AUTHHOST=
 CT_HTTPHOST=
 CT_PROJECTKEY=
 CT_CLIENTID=
 CT_CLIENTSECRET=
+
+# Promotions service
+PROMOTIONS_URL=http://localhost:3001/promotions/calculate
+CACHE_CART_PRODUCTS=true
+CACHE_CART_PRICES=true
