--- a/package.json
+++ b/package.json
@@ -2,32 +2,23 @@
   "name": "catalog",
   "version": "0.0.1",
   "description": "Catalog API",
-  "main": "dist/main.js",
-  "scripts": {
-    "build": "node_modules/.bin/rimraf dist && tsc -p tsconfig-build.json",
-    "build:watch": "npm run build -- --watch",
-    "start": "node dist/main.js",
-    "dev": "node_modules/.bin/nodemon -L --watch ./dist ./dist/main.js",
-    "test": "node_modules/.bin/jest --passWithNoTests --runInBand --no-cache",
-    "test:staged": "npm run test -- --findRelatedTests",
-    "test:ci": "npm run test -- --coverage",
-    "lint": "node_modules/.bin/eslint . --ignore-path .gitignore --ext .ts --fix"
-  },
+  "main": "src/main.ts",
   "license": "UNLICENSED",
+  "scripts": {
+    "build": "tsc -p tsconfig-build.json",
+    "start": "node --experimental-strip-types --env-file=.env src/main.ts",
+    "dev": "node --experimental-strip-types --env-file=.env --watch src/main.ts",
+    "test": "node_modules/.bin/jest --passWithNoTests --runInBand --no-cache"
+  },
+  "imports": {
+    "#*": "./src/*.ts"
+  },
   "devDependencies": {
     "@faker-js/faker": "^9.2.0",
     "@shelf/jest-mongodb": "^4.3.2",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
     "async-sema": "^3.1.1",
-    "eslint": "^9.15.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.13.2",
-    "eslint-plugin-promise": "^7.1.0",
     "jest": "^29.4.3",
-    "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
@@ -43,14 +34,12 @@
     "@mgcrea/fastify-request-logger": "^1.9.0",
     "@mgcrea/pino-pretty-compact": "^1.4.2",
     "ajv": "^8.17.1",
-    "dotenv": "^16.0.3",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
     "fastify-print-routes": "^4.0.0",
     "jsonata": "^2.0.3",
     "jsonpath-plus": "^10.2.0",
     "kolorist": "^1.8.0",
-    "module-alias": "^2.2.2",
     "mongo-update": "^1.1.0",
     "mongodb": "^6.10.0",
     "nanoid": "^5.0.8",
@@ -61,16 +50,7 @@
     "typescript": "^5.6.3",
     "typesense": "^1.7.2"
   },
-  "_moduleAliases": {
-    "@core": "dist/core",
-    "@infrastructure": "dist/infrastructure"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "npm run lint",
-      "npm run test:staged"
-    ]
-  },
+  "type": "module",
   "engines": {
     "node": "22.x"
   }
