--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "node-fetch": "^3.3.2",
     "ts-results": "^3.3.0",
     "typescript": "^5.6.3",
-    "typesense": "^1.7.2"
+    "typesense": "^1.7.2",
+    "umzug": "^3.8.2"
   },
   "type": "module",
   "engines": {
