--- a/package.json
+++ b/package.json
@@ -6,21 +6,19 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
-    "start": "node --experimental-strip-types --env-file=.env src/main.ts",
-    "dev": "node --experimental-strip-types --env-file=.env --watch src/main.ts",
-    "test": "node_modules/.bin/jest --passWithNoTests --runInBand --no-cache"
+    "start": "node --no-warnings --experimental-strip-types --env-file=.env src/main.ts",
+    "dev": "node --no-warnings --experimental-strip-types --env-file=.env --watch src/main.ts",
+    "test": "node --no-warnings --experimental-strip-types --env-file=test.env --test **/*.spec.ts"
   },
   "imports": {
     "#*": "./src/*.ts"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.2.0",
-    "@shelf/jest-mongodb": "^4.3.2",
-    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
     "async-sema": "^3.1.1",
-    "jest": "^29.4.3",
+    "mongodb-memory-server": "^10.1.2",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
